added hello world image to index.html

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,6 +5,16 @@
 <title>Hello World</title>
 </head>
 <body>
+    <table border="0" cellpadding="10">
+      <tr>
+        <td>
+          <img src="images/hello-world.jpg">
+        </td>
+        <td>
+          <h1>Sample "Hello, World" Application</h1>
+        </td>
+      </tr>
+    </table>
 <a href="saytime">Click Here</a>
 </body>
 </html>
